[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "scheduler-tools"
version = "0.0.1"
description = "Basic tools for automating some PBS work. In progress, and potentially unsafe."
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "apscheduler>=3.11.0",
    "paramiko>=3.5.1",
    "python-daemon>=3.1.2",
    "regex>=2024.11.6",
    "rich>=14.0.0",
]

[project.optional-dependencies]
ui = [
  "textual>=3.2.0",
]


[dependency-groups]
dev = [
  "pytest>=6.0",
  "pytest-cov>=4.0",
]


[tool.pytest.ini_options]
addopts = "--cov=schedtools"
markers = [
    "nohidecreds: Do not hide SMTP credentials (if they exist) for this test.",
]
testpaths = [
    "test",
]
